--- a/src/style/main.css
+++ b/src/style/main.css
@@ -1,14 +1,14 @@
 @import "./base.css";
 
-#app {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-
-  font-weight: normal;
-}
-
 a,
 li {
   text-decoration: none;
+}
+
+
+main {
+  padding-top: 140px;
+  max-width: 1400px;
+  display: flex;
+  justify-content: center;
 }
