--- a/src/style/main.css
+++ b/src/style/main.css
@@ -5,10 +5,15 @@ li {
   text-decoration: none;
 }
 
-
 main {
-  padding-top: 140px;
-  max-width: 1400px;
+  padding-top: 160px;
   display: flex;
   justify-content: center;
+  flex-direction: column;
+}
+
+h1 {
+  font-family: "Satisfy", cursive;
+  text-align: center;
+  width: 100%;
 }
