--- a/src/style/main.css
+++ b/src/style/main.css
@@ -16,8 +16,7 @@ body {
   ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 }
 
-a,
-li {
+a {
   text-decoration: none;
 }
 
