--- a/src/style/main.css
+++ b/src/style/main.css
@@ -16,6 +16,15 @@ body {
   ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 }
 
+#app{
+  
+  display: flex;
+  flex-direction: column;
+  align-content: flex-end;
+  justify-content: space-between;
+  min-height: 100vh;
+}
+
 a {
   text-decoration: none;
 }
