--- a/src/components/ProjectDescription/DescriptionItem.css
+++ b/src/components/ProjectDescription/DescriptionItem.css
@@ -5,6 +5,7 @@
   border: none;
   box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.171);
   color: rgb(35, 34, 44);
+  padding: 10px;
 }
 
 h2 {
@@ -20,6 +21,16 @@ h3 {
 li {
   list-style-type: none;
   margin-top: 15px;
-  padding-left: 30px;
-  font-size: 20px;
+  font-size: 18px;
+}
+
+@media screen and (min-width: 768px) {
+  li {
+    padding-left: 30px;
+    padding-right: 30px;
+    font-size: 20px;
+  }
+  .about-content{
+    padding: 20px;
+  }
 }
