--- a/src/components/WeatherComp/WeatherItem.css
+++ b/src/components/WeatherComp/WeatherItem.css
@@ -1,3 +1,9 @@
+.container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
 label {
   font-size: 18px;
   color: #084298;
@@ -6,16 +12,16 @@ label {
 
 .card {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
+  justify-content: center;
   align-items: center;
   box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.171);
   border: none;
-  padding: 40px 20px;
+  padding: 20px 20px;
 }
 
 .weather-icon {
   height: 120px;
-  margin-right: 70px;
 }
 
 .wrapper {
@@ -30,13 +36,33 @@ label {
   text-align: left;
 }
 
-
-@media screen and (min-width: 1200px){
-  .card{
+@media screen and (min-width: 1200px) {
+  .card {
     justify-content: center;
     padding: 50px;
+    margin-top: 45px;
   }
-  .weather-icon{
+  .weather-icon {
     padding-right: 40px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .weather-container {
+    margin: auto;
+  }
+  .card {
+    flex-direction: row;
+    padding: 40px 20px;
+    max-width: fit-content;
+  }
+  .weather-icon {
+    margin-right: 70px;
+  }
+}
+
+@media screen and (max-width: 576px) {
+  .text-display {
+    font-size: 20px;
   }
 }
