--- a/src/style/main.css
+++ b/src/style/main.css
@@ -21,8 +21,6 @@ body {
   display: flex;
   flex-direction: column;
   align-content: flex-end;
-  justify-content: space-between;
-  min-height: 100vh;
 }
 
 a {
@@ -30,14 +28,24 @@ a {
 }
 
 main {
-  padding-top: 160px;
+  padding-top: 80px;
+  padding-left: 40px;
+  padding-right: 40px;
   display: flex;
   justify-content: center;
   flex-direction: column;
+  min-height: 80vh;
 }
 
 h1 {
   font-family: "Satisfy", cursive;
   text-align: center;
   width: 100%;
+}
+
+@media screen and (min-width: 768px) {
+  main{
+    padding-top: 160px;
+    min-height: 82vh;
+  }
 }
