feat(loader weatherItem): add a loader and error comp
add a loader and weather component to weatherItem

--- a/src/components/WeatherComp/WeatherItem.css
+++ b/src/components/WeatherComp/WeatherItem.css
@@ -4,6 +4,11 @@
   justify-content: center;
 }
 
+.error-container {
+  display: flex;
+  justify-content: center;
+}
+
 label {
   font-size: 18px;
   color: #084298;
@@ -19,6 +24,7 @@ label {
   border: none;
   padding: 20px 20px;
 }
+
 
 .weather-icon {
   height: 120px;
@@ -36,14 +42,33 @@ label {
   text-align: left;
 }
 
+.warning {
+  border: 4px solid rgba(255, 0, 0, 0.685) !important;
+  box-shadow: 0px 0px 4px rgba(255, 0, 0, 0.664) !important;
+}
+
+.warning-txt {
+  padding-top: 10px;
+  padding-left: 4px;
+  color: rgb(199, 4, 4);
+}
+
+.notFound-icon {
+  height: 200px;
+}
+
 @media screen and (min-width: 1200px) {
   .card {
     justify-content: center;
     padding: 50px;
     margin-top: 45px;
   }
+
   .weather-icon {
     padding-right: 40px;
+  }
+  .notFound-icon {
+    min-height: 400px;
   }
 }
 
@@ -56,8 +81,14 @@ label {
     padding: 40px 20px;
     max-width: fit-content;
   }
+  .card.error {
+    flex-direction: column;
+  }
   .weather-icon {
     margin-right: 70px;
+  }
+  .notFound-icon {
+    height: 300px;
   }
 }
 
