--- a/src/style/base.css
+++ b/src/style/base.css
@@ -17,4 +17,25 @@ body {
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  position: relative;
+}
+
+body:before {
+  opacity: 0.2;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  width: 100%;
+  height: 100%;
+  content: " ";
+  /* Photo by <a href="https://unsplash.com/@jtzanno?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Joao Tzanno</a> on <a href="https://unsplash.com/photos/E3AQ09IW6oA?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a>
+   */
+  background-image: url("../assets/clouds_bg.webp");
+  /* Photo by <a href="https://unsplash.com/es/@p?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Patrik Göthe</a> on <a href="https://unsplash.com/photos/xiTFENI0dMY?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a>
+   */
+  /* background-image: url("https://images.unsplash.com/45/tkLOe7nnQ7mnMsiuijBy_hm.jpg?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2074&q=80"); */
+  background-repeat: no-repeat;
+  background-size: cover;
 }
