refactor(weather comp): seperate parts of weather comp in several components

--- a/src/components/ProjectDescription/DescriptionItem.css
+++ b/src/components/ProjectDescription/DescriptionItem.css
@@ -18,6 +18,11 @@ h3 {
   color: rgb(44, 42, 61);
 }
 
+.project-list{
+  padding-left: 15px;
+  padding-right: 15px;
+}
+
 li {
   list-style-type: none;
   margin-top: 15px;
