--- a/src/components/Header/HeaderItem.css
+++ b/src/components/Header/HeaderItem.css
@@ -10,8 +10,9 @@
 }
 
 .logo {
-  height: 60px;
-  border-radius: 20px;
+  margin-left: 9px;
+  height: 50px;
+  border-radius: 10px;
 }
 
 .navbar-nav {
@@ -37,11 +38,15 @@
     height: 120px;
   }
   .logo {
-    height: 80px;
+    margin-left: 15px;
+    height: 70px;
   }
 }
 @media screen and (min-width: 1200px) {
   .header-item {
     padding-right: 80px;
+  }
+  .logo{
+    margin-left: 30px;
   }
 }
