--- a/src/style/base.css
+++ b/src/style/base.css
@@ -9,8 +9,13 @@
   font-weight: normal;
 }
 
+html, body, #app{
+  min-height: 100%;
+  height: 100%;
+}
+
 body {
-  min-height: 100vh;
+  /* min-height: 100vh; */
   line-height: 1.6;
   font-family: "Helvetica Neue", sans-serif;
   font-size: 16px;
