--- a/src/style/main.css
+++ b/src/style/main.css
@@ -17,7 +17,8 @@ body {
 }
 
 #app{
-  
+  /* min-height: 100vh; */
+  min-height: 100%;
   display: flex;
   flex-direction: column;
   align-content: flex-end;
@@ -36,13 +37,14 @@ a:visited{
 }
 
 main {
+  min-height: 100%;
+  overflow: auto;
+  padding-bottom: 70px;
   padding-top: 80px;
-  padding-left: 40px;
-  padding-right: 40px;
   display: flex;
   justify-content: center;
   flex-direction: column;
-  min-height: 80vh;
+  /* min-height: 80vh; */
 }
 
 h1 {
@@ -54,6 +56,12 @@ h1 {
 @media screen and (min-width: 768px) {
   main{
     padding-top: 160px;
-    min-height: 82vh;
+    /* min-height: 82vh; */
   }
 }
+
+/* @media screen and (max-width: 1200px) and (max-height: 900px){
+  main{
+    min-height: 90vh;
+  }
+} */
