feat(about view): improve responsive

--- a/src/style/main.css
+++ b/src/style/main.css
@@ -44,7 +44,6 @@ main {
   display: flex;
   justify-content: center;
   flex-direction: column;
-  /* min-height: 80vh; */
 }
 
 h1 {
@@ -53,15 +52,8 @@ h1 {
   width: 100%;
 }
 
-@media screen and (min-width: 768px) {
+/* @media screen and (min-width: 768px) {
   main{
     padding-top: 160px;
-    /* min-height: 82vh; */
-  }
-}
-
-/* @media screen and (max-width: 1200px) and (max-height: 900px){
-  main{
-    min-height: 90vh;
   }
 } */
