--- a/src/views/NotFound/NotFoundView.css
+++ b/src/views/NotFound/NotFoundView.css
@@ -1,5 +1,10 @@
-main {
+.error-page-container {
+  overflow: auto;
+  display: flex;
+  flex-direction: column;
   width: 100%;
+  padding-top: 10px;
+  padding-bottom: 20px;
 }
 
 .container {
@@ -54,24 +59,24 @@ a:hover {
   }
 }
 
-@media screen and (min-width: 768px) {
-  main {
-    padding-top: 170px;
-  }
-}
 
 @media screen and (min-width: 768px) and (max-width: 992px) {
-  main {
-    padding-top: 130px;
+  .error-page-container {
+    padding-top: 50px;
   }
   img {
     max-height: 400px;
   }
 }
+@media screen and (min-width: 993px) {
+  .error-page-container {
+    padding-top: 50px;
+  }
+}
 
-@media  screen and (max-width: 576px) {
-    main{
-        padding-left: 0;
-        padding-right: 0;
-    }
+@media screen and (max-width: 576px) {
+  .error-page-container {
+    padding-left: 0;
+    padding-right: 0;
+  }
 }
